using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ConstNames
{
    // Animator Params
    public static readonly string IsOnGround = "IsOnGround";
    public static readonly string YaxisSpeed = "YaxisSpeed";
    public static readonly string XaxisSpeed = "XaxisSpeed";
    public static readonly string IsNeedCrouch = "IsNeedCrouch";
    public static readonly string IsBoom = "IsBoom";
    public static readonly string IsHurt = "IsHurt";
    public static readonly string IsClimb = "IsClimb";
    public static readonly string FrogIsJump= "IsJump";
    public static readonly string FrogIsFall = "IsFall";
    public static readonly string FrogIsIdle = "IsIdle";
   
    // Buttons
    public static readonly string JumpButton= "Jump";
    public static readonly string CrouchButton= "Crouch";

    // Tags
    public static readonly string PlayerTag = "Player";
    public static readonly string MainCameraTag = "MainCamera";

    // Layer
    public static readonly string EnemiesLayer = "Enemies";
    public static readonly string GroundLayer = "Ground";
    public static readonly string PlayerLayer = "Player";

    // Resources Path
    public static readonly string EnemiesPath = "EnemiesDeath";
    public static readonly string FrogPath = "Frog";
    public static readonly string OpossumPath = "Opossum";

    // YarnSpinner
    public static readonly string StartNode = "Start";

    // DialogName
    public static readonly string PlayerHead = "Player";
    public static readonly string NpcHead = "Npc";

}
